  - Scenarios are allowed to not have a name.

  - Undefined steps that use a form or grid now suggest a class along
    with the method.

  - Scenarios with undefined steps now report that in their exception
     message.

  - Step definitions with longer names are now considered for matches
    before those with shorter names. This fixes the problem where the
    wrong step definition could get invoked.

  - Added "with" as another "secondary" keyword (like "and").

  - The plain text reporter now separates steps from the previous with
    blank lines if they use a "primary" keyword (given, when, or then).
    This allows you to create your own "groups" by starting with a
    primary keyword and connecting steps to it with secondary keywords.

2.0.0.90 - 2010/07/11:

  - First release of BehaveN 2. Almost a complete rewrite with a
    completely changed API. Sorry.

  - No more code-only syntax. Don't ask for it.

  - [Convert] and [FromContext] attributes are gone.

  - It's now possible to write step definitions in an assembly
    without referencing BehaveN.dll.

  - IoC-like injection of "context" objects into constructors of
    classes containing step definitions.

  - Output parameters of step definitions cause BehaveN to assert
    on values.

  - Some limited support for authoring steps in natural languages.

  - New BehaveN.Tool.exe for doing all sorts of neat tasks.

1.3.0 - 2009/09/25:

  - Removed all step attributes. The regular expression patterns are
    inferred now inferred from the method name.

  - FromContext attribute is now required on parameters that get their
    values from the hidden context.

  - Removed Context/Specification-style tests since I'm not using them
    and don't feel like supporting them.

1.2.1 - 2009/08/20:

  - Fixed bug with forms in tests that were skipping lines.

  - Added some spaces around the output of forms and grids.

  - Steps using the delegate syntax can now output formatted forms
    and grids.
