@@ -1,3 +1,4 @@
+using System;
 using NUnit.Framework;
 using SharpTestsEx;
 
@@ -7,7 +8,7 @@ namespace BehaveN.Tests
     public class Scenario_Context_Tests : BaseScenarioTests
     {
         [Test]
-        public void it_passes_when_all_of_the_outputs_are_correct()
+        public void the_same_context_object_is_passed_in_to_all_step_definition_classes()
         {
             TheFeature.StepDefinitions.UseStepDefinitionsFromType<MyGivenStepDefinitonsThatRequireMyContext>();
             TheFeature.StepDefinitions.UseStepDefinitionsFromType<MyThenStepDefinitonsThatRequireMyContext>();
@@ -17,6 +18,19 @@ namespace BehaveN.Tests
                         "Then the value should be foo");
 
             TheScenario.Passed.Should().Be.True();
+        }
+
+        [Test]
+        public void context_objects_that_implement_IDisposable_are_disposed_after_the_scenario_is_executed()
+        {
+            MyContext.DisposeWasInvoked = false;
+
+            TheFeature.StepDefinitions.UseStepDefinitionsFromType<MyGivenStepDefinitonsThatRequireMyContext>();
+
+            ExecuteText("Scenario: Dispose",
+                        "Given this foo");
+
+            MyContext.DisposeWasInvoked.Should().Be(true);
         }
     }
 
@@ -50,8 +64,15 @@ namespace BehaveN.Tests
         }
     }
 
-    public class MyContext
+    public class MyContext : IDisposable
     {
+        public static bool DisposeWasInvoked;
+
         public string MyString { get; set; }
+
+        public void Dispose()
+        {
+            DisposeWasInvoked = true;
+        }
     }
 }
